[package]
name = "simple-proxy"
version = "0.1.0"
authors = ["rcrwhyg <rcrwhyg@sina.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/rcrwhyg/simple-proxy"
homepage = "https://github.com/rcrwhyg/simple-proxy"
description = """
A simple proxy server in Rust.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
axum = "0.8"
dashmap = "6.1"
argon2 = "0.5"
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
rand_core = { version = "0.6", features = ["std"] }
