[package]
name = "simple-proxy"
version = "0.1.0"
authors = ["rcrwhyg <rcrwhyg@sina.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/rcrwhyg/simple-proxy"
homepage = "https://github.com/rcrwhyg/simple-proxy"
description = """
A simple proxy server in Rust.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
pingora = { version = "0.5", features = ["lb", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["http2"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
rand_core = { version = "0.6", features = ["std"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
